kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: hello-world
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
